--- a/Section_2_and_3_Who_will_certified_the _H-1B.ipynb
+++ b/Section_2_and_3_Who_will_certified_the _H-1B.ipynb
@@ -500,11 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.863871216351\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_extraction import DictVectorizer as DV\n",
@@ -537,9 +545,9 @@
     "    y, _ = pd.factorize(train['certified'])\n",
     "    clf.fit(vec_train, y)\n",
     "\n",
-    "    preds = sv.predict(vec_test)\n",
+    "    preds = clf.predict(vec_test)\n",
     "    metrics = pd.crosstab(test['certified'], preds, rownames=['actual'], colnames=['preds'])\n",
-    "    score = (metrics[0][0] + metrics[1][1]) / float(metrics.values.sum())\n",
+    "    score.append((metrics[0][0] + metrics[1][1]) / float(metrics.values.sum()))\n",
     "print max(score)"
    ]
   },
@@ -550,7 +558,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s"
+   ]
   }
  ],
  "metadata": {
